deployments/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - lnavarro.dev
    secretName: "lnavarro-dev-prod-tls"
  rules:
  - host: appsmith.lnavarro.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tools-appsmith
            port:
              number: 80
